--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <div class="quiz-container">
       <div id="quiz">
+        <h1>Talvin's super fun quiz</h1>
         <div id="progress-bar-container">
           <div id="progress-bar"></div>
         </div>
